--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body, html {
   </div>
   <div class="w3-display-middle">
     <h1 class="w3-jumbo w3-animate-top">CARNIVAL WARFARE</h1>
-    <p class="w3-xlarge w3-animate-zoom w3-center">Coming Soon To A City Near You</p>
+    <p class="w3-xlarge w3-animate-zoom w3-center">Coming Soon To A City Near You!</p>
     <hr class="w3-border-grey" style="margin:auto;width:60%">
     <p class="w3-large w3-center">x days left</p>
   </div>
