--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ body, html {
     height: 100%
     }
 .bgimg {
-  background-image: url('/images/ag.jpg');
+  background-image: url('images/ag.jpg');
   min-height: 100%;
   background-position: center;
   background-size: cover;
